--- a/index.html
+++ b/index.html
@@ -22,10 +22,17 @@
     </header>
     <div class="con">
 
+        <!--  this is an input field where user enters the task -->
         <input id="input" type="text" placeholder="Enter Today's Task">
+
+        <!-- this first button for the adding the task to list -->
         <button id="btn"> Add to Task List</button>
+
+        <!-- this  second button for the remove all task from the list -->
         <button id="btn2">Remove All Task</button>
     </div>
+
+    <!-- task stored in the list..... -->
     <ol id="task_list" ></ol>
 
 
